--- a/less/fonts.less
+++ b/less/fonts.less
@@ -26,25 +26,26 @@
   font-weight: 700;
   font-family: "Georgia";
   font-style: normal;
-  src: url("../fonts/georgia-bold.woff2") format("woff2"),
-    url("../fonts/georgia-bold.woff") format("woff");
+  src: url("../fonts/GeorgiaBold.woff2") format("woff2"),
+    url("../fonts/GeorgiaBold.woff") format("woff");
 }
 
 @font-face {
   font-weight: 400;
   font-family: "Georgia";
   font-style: normal;
-  src: url("../fonts/georgia-italic.woff2") format("woff2"),
-    url("../fonts/georgia-italic.woff") format("woff");
+  src: url("../fonts/GeorgiaItalic.woff2") format("woff2"),
+    url("../fonts/GeorgiaItalic.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Font Awesome';
-  src: url('FontAwesome.eot');
-  src: url('FontAwesome.woff2') format('woff2'),
-       url('FontAwesome.woff') format('woff'),
-       url('FontAwesome.ttf') format('truetype'),
-       url('FontAwesome.svg#FontAwesome') format('svg'),
-       url('FontAwesome.eot?#iefix') format('embedded-opentype');
+  font-family: "Font Awesome";
+  src: url("FontAwesome.eot");
+  src: url("FontAwesome.woff2") format("woff2"),
+       url("FontAwesome.woff") format("woff"),
+       url("FontAwesome.ttf") format("truetype"),
+       url("FontAwesome.svg#FontAwesome") format("svg"),
+       url("FontAwesome.eot?#iefix") format("embedded-opentype");
   font-weight: normal;
   font-style: normal;
+}
