--- a/less/style.less
+++ b/less/style.less
@@ -4,3 +4,13 @@
 @import "mixin.less";
 @import "scaffolding.less";
 @import "blocks/wrapper";
+@import "blocks/header";
+@import "blocks/address";
+@import "blocks/weather";
+@import "blocks/menu";
+@import "blocks/btn";
+@import "blocks/footer";
+@import "blocks/social";
+@import "vendors/swiper";
+@import "blocks/promo";
+@import "blocks/booking";
