--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,10 @@
 @import "blocks/btn";
 @import "blocks/footer";
 @import "blocks/social";
+@import "blocks/title";
 @import "vendors/swiper";
 @import "blocks/promo";
 @import "blocks/booking";
+@import "blocks/about";
+@import "blocks/benefits";
+@import "blocks/discount";
