Desktop main page

--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -4,7 +4,7 @@
   border-radius: 3px;
   background-color: @yellow;
   color: #fff;
-  font-size: 400;
+  font-weight: normal;
   transition: ease-out 0.3s;
   
   &:hover,
