--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -1,8 +1,8 @@
 .header__top {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 23px;
   padding-bottom: 15px;
 }
 
