--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -15,5 +15,12 @@
 }
 
 .social__item {
-  margin-left: 17px;
+  margin-right: 20px;
+  
+  &:first-child {
+    .social__icon {
+      width: 25px;
+      height: 25px;
+    }
+  }
 }
