--- a/less/blocks/weather.less
+++ b/less/blocks/weather.less
@@ -1,4 +1,6 @@
 .weather {
+  margin-left: auto;
+  
   p {
     margin: 0;
   }
@@ -6,10 +8,11 @@
 
 .weather__value {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: baseline;
   
   span {
+    margin-right: 15px;
     font-size: 30px;
     font-weight: 400;
     line-height: 36px;
