--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,5 +1,10 @@
+.about {
+  padding-top: 40px;
+}
+
 .about__subtitle {
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .about__wrap {
@@ -9,6 +14,9 @@
 }
 
 .about__text {
+  margin-top: 0;
+  margin-bottom: 30px;
+  
   span {
     display: block;
     margin-bottom: 20px;
@@ -21,4 +29,9 @@
 
 .about__block {
   width: 50%;
+  padding-right: 30px;
+}
+
+.about__title {
+  margin-bottom: 50px;
 }
