--- a/less/blocks/benefits.less
+++ b/less/blocks/benefits.less
@@ -1,27 +1,30 @@
 .benefits {
-  padding-top: 80px;
-  padding-bottom: 90px;
+  padding-top: 55px;
+  padding-bottom: 95px;
 }
 
 .benefits__list {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 .benefits__icon {
-  width: 35px;
-  height: auto;
+  height: 35px;
+  width: auto;
 }
 
 .benefits__title {
   font-size: 24px;
   font-weight: normal;
   font-style: normal;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 .benefits__item {
   width: 30%;
+  margin-right: 40px;
   padding-left: 50px;
   padding-right: 40px;
   padding-top: 20px;
@@ -53,4 +56,5 @@
 
 .benefits__block {
   background-color: #fff;
+  padding-bottom: 5px;
 }
