--- a/less/blocks/discount.less
+++ b/less/blocks/discount.less
@@ -19,7 +19,7 @@
 }
 
 .discount__wrap {
-  min-height: 234px;
+  min-height: 228px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -28,9 +28,13 @@
 }
 
 .discount__title {
+  font-family: "Georgia", "Arial", sans-serif;
+  font-size: 28px;
+  line-height: 1;
   color: #fff;
   padding-left: 70px;
-  padding-right: 150px;
+  margin: 0;
+  max-width: 800px;
   position: relative;
   
   span {
@@ -41,10 +45,22 @@
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    left: 15px;
     width: 25px;
     height: 58px;
     background-image: url(../img/icon-building.svg);
     background-repeat: no-repeat;
+  }
+}
+
+.discount__btn {
+  width: 225px;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 12px;
+  
+  &:hover,
+  &:active {
+    color: #fff;
   }
 }
