--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -5,12 +5,13 @@
 .promo__title {
   width: 100%;
   height: 100%;
+  padding-top: 155px;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   color: #fff;
   text-align: center;
@@ -24,7 +25,10 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 20px;
+  text-transform: uppercase;
   margin-top: 0;
+  letter-spacing: 2px;
+  position: relative;
   
   span {
     display: block;
@@ -32,16 +36,32 @@
     font-size: 60px;
     line-height: 1;
     font-weight: bold;
+    margin-top: 15px;
+  }
+  
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 259px;
+    height: 2px;
+    background-color: #fff;
   }
 }
 
 .promo__comment {
   font-family: "Georgia", "Arial", sans-serif;
   font-size: 24px;
+  font-weight: normal;
+  font-style: italic;
   line-height: 1;
+  letter-spacing: 5px;
 }
 
 .promo__btn {
+  margin-top: 25px;
   font-size: 24px;
   font-weight: normal;
   color: #fff;
@@ -68,7 +88,7 @@
 .promo__pagination {
   z-index: 20;
   position: absolute;
-  bottom: 125px;
+  bottom: 120px;
   left: 50%;
   transform: translateX(-50%);
   
