--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -7,12 +7,6 @@
   margin-bottom: 30px;
 }
 
-.about__wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
 .about__text {
   margin-top: 0;
   margin-bottom: 30px;
@@ -27,11 +21,12 @@
   }
 }
 
-.about__block {
-  width: 50%;
-  padding-right: 30px;
-}
-
 .about__title {
   margin-bottom: 50px;
+}
+
+.about__figure {
+  width: 50%;
+  float: right;
+  margin-left: 30px;
 }
