--- a/less/blocks/discount.less
+++ b/less/blocks/discount.less
@@ -19,7 +19,7 @@
 }
 
 .discount__wrap {
-  min-height: 228px;
+  height: 228px;
   display: flex;
   justify-content: space-between;
   align-items: center;
