--- a/less/blocks/menu.less
+++ b/less/blocks/menu.less
@@ -35,3 +35,15 @@
 .menu__item {
   margin-right: 35px;
 }
+
+.menu__btn {
+  display: none;
+  outline: none;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  background-image: url(../img/icon-menu-ham.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
