--- a/less/blocks/room.less
+++ b/less/blocks/room.less
@@ -87,10 +87,14 @@
   width: 370px;
   min-height: 544px;
   padding: 55px 40px 50px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   box-sizing: border-box;
   color: #fff;
   position: relative;
-  z-index: 1;
+  z-index: 10;
   background-color: rgba(0, 0, 0, 0.9);
   
   p {
@@ -152,6 +156,7 @@
   width: 100%;
   min-height: 49px;
   border-radius: 0;
+  margin-top: auto;
 }
 
 .room__pagination {
@@ -165,9 +170,18 @@
     background-color: #fff;
     border: 1px solid @yellow;
     opacity: 1;
+    margin-right: 10px;
   }
   
   .swiper-pagination-bullet-active {
     background-color: @yellow;
   }
+}
+
+.room__slide {
+  width: 100% !important;
+}
+
+.room__slider-wrap {
+  position: relative;
 }
