--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -301,7 +301,6 @@
   }
   
   .room__price {
-    width: 190px;
     margin-top: -30px;
     margin-bottom: 20px;
   }
@@ -309,6 +308,10 @@
   .room__about {
     width: 100%;
     min-height: auto;
+  }
+  
+  .room__btn {
+    margin-top: 20px;
   }
   
   .modal__title {
