--- a/less/blocks/room.less
+++ b/less/blocks/room.less
@@ -86,7 +86,7 @@
 .room__about {
   width: 370px;
   min-height: 544px;
-  padding: 55px 40px 50px 30px;
+  padding: 55px 40px 50px 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -99,15 +99,19 @@
   
   p {
     line-height: 1.6;
+    margin-bottom: 0;
   }
 }
 
 .room__price {
+  width: 190px;
   margin: 0;
   margin-left: 37px;
-  margin-bottom: 35px;
-  padding: 20px;
+  margin-bottom: 40px;
   min-height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 1;
   box-sizing: border-box;
@@ -129,7 +133,7 @@
   text-transform: uppercase;
   position: relative;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   
   span {
     display: block;
