--- a/less/blocks/title.less
+++ b/less/blocks/title.less
@@ -5,3 +5,22 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.title-h1 {
+  text-align: left;
+  color: #fff;
+  font-size: 48px;
+  line-height: 1;
+  font-weight: bold;
+  margin-top: 50px;
+}
+
+.title-internal {
+  font-family: "Circe", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 1;
+  font-weight: normal;
+  color: #3c434d;
+  padding-bottom: 12px;
+  border-bottom: 1px solid rgb(224, 224, 224);
+}
