--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -101,6 +101,10 @@
     margin-left: auto;
     margin-right: auto;
   }
+  
+  .feedback__input {
+    width: 30%;
+  }
 }
 
 //-------------------------
@@ -153,6 +157,12 @@
     width: 100%;
     margin-bottom: 20px;
     text-align: center;
+  }
+  
+  .contacts__block {
+    position: static;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -317,5 +327,39 @@
   .modal__title {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  
+  .contacts {
+    padding-top: 40px;
+  }
+  
+  .contacts__block {
+    width: 100%;
+    padding: 20px;
+  }
+  
+  .contacts__item--phone a {
+    font-size: 20px;
+  }
+  
+  .title-internal {
+    font-size: 36px;
+  }
+  
+  .feedback__wrap {
+    display: block;
+  }
+  
+  .feedback__input {
+    width: 100%;
+  }
+  
+  .feedback__label {
+    display: block;
+    margin-bottom: 20px;
+  }
+  
+  .feedback {
+    margin-bottom: 40px;
   }
 }
