--- a/less/style.less
+++ b/less/style.less
@@ -21,4 +21,6 @@
 @import "blocks/room";
 @import "blocks/logo";
 @import "blocks/modal";
+@import "blocks/feedback";
+@import "blocks/contacts";
 @import "blocks/media";
