--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -105,6 +105,10 @@
   .feedback__input {
     width: 30%;
   }
+  
+  .about__item:last-child {
+    margin-right: 30px;
+  }
 }
 
 //-------------------------
@@ -163,6 +167,10 @@
     position: static;
     margin-left: auto;
     margin-right: auto;
+  }
+  
+  .about--service {
+    padding-bottom: 20px;
   }
 }
 
@@ -361,5 +369,23 @@
   
   .feedback {
     margin-bottom: 40px;
+  }
+  
+  .about--service {
+    padding-top: 40px;
+  }
+  
+  .about__item {
+    width: 270px;
+    margin-right: 0;
+    margin-bottom: 20px;
+    
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  
+  .about__list {
+    padding-top: 0;
   }
 }
